tests/fixtures/rules/require-dot-notation/bad/camel-snake.js
let a = b['camelCased_butWithSnakes'];
